# meiliscan

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  tasks.md
docs/: 20260104_extended_analysis_plan.md  implementation_plan.md
docs/20260101_initial_implemntation/: implementation_plan.md  tasks.md
meiliscan/: __init__.py  cli.py
meiliscan/analyzers/: __init__.py  base.py  best_practices.py  document_analyzer.py  historical.py  instance_config_analyzer.py  performance_analyzer.py  schema_analyzer.py  search_probe_analyzer.py
meiliscan/collectors/: __init__.py  base.py  dump_parser.py  live_instance.py
meiliscan/core/: __init__.py  analyzer.py  collector.py  progress.py  reporter.py  scorer.py
meiliscan/exporters/: __init__.py  agent_exporter.py  base.py  json_exporter.py  markdown_exporter.py  sarif_exporter.py
meiliscan/models/: __init__.py  comparison.py  finding.py  index.py  instance_config.py  report.py  task.py
meiliscan/web/: __init__.py  app.py  routes.py
meiliscan/web/static/css/: style.css
meiliscan/web/templates/: base.html  comparison.html  dashboard.html  findings.html  index_detail.html  search.html  tasks.html
meiliscan/web/templates/components/: findings_list.html  search_results.html  tasks_list.html
meilisearch_analyzer/: __init__.py  cli.py
meilisearch_analyzer/analyzers/: __init__.py  base.py  best_practices.py  document_analyzer.py  historical.py  performance_analyzer.py  schema_analyzer.py
meilisearch_analyzer/collectors/: __init__.py  base.py  dump_parser.py  live_instance.py
meilisearch_analyzer/core/: __init__.py  analyzer.py  collector.py  reporter.py  scorer.py
meilisearch_analyzer/exporters/: __init__.py  agent_exporter.py  base.py  json_exporter.py  markdown_exporter.py  sarif_exporter.py
meilisearch_analyzer/models/: __init__.py  comparison.py  finding.py  index.py  report.py
meilisearch_analyzer/web/: __init__.py  app.py  routes.py
meilisearch_analyzer/web/static/css/: style.css
meilisearch_analyzer/web/templates/: base.html  comparison.html  dashboard.html  findings.html  index_detail.html
meilisearch_analyzer/web/templates/components/: document_samples.html  finding_detail.html
scripts/: seed_data.py  seed_tasks.py
tests/: test_agent_exporter.py  test_best_practices_analyzer.py  test_document_analyzer.py  test_dump_parser.py  test_finding.py  test_historical_analyzer.py  test_index.py  test_instance_config_analyzer.py  test_live_instance_collector.py  test_markdown_exporter.py  test_performance_analyzer.py  test_report.py  test_sarif_exporter.py  test_schema_analyzer.py  test_search_probe_analyzer.py  test_web_export.py
