[project]
name = "meilisearch-analyzer"
version = "0.1.0"
description = "A comprehensive tool for analyzing MeiliSearch instances and dumps to identify optimization opportunities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "meilisearch>=0.31.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
analysis = [
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
]
all = [
    "meilisearch-analyzer[web,analysis,dev]",
]

[project.scripts]
meilisearch-analyzer = "meilisearch_analyzer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["meilisearch_analyzer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
